--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: python
 python:
-  - "3.6"
-install:
-  - pip install -r requirements.txt
-  # command to run tests
-  script:
-  # unit test
-  - python -m pytest -v
-  # liting test
-  - flake
+	- "3.6"
+
+services:
+	- docker
+
+before_script: pip install docker-compose
+
+script:
+	- docker-compose run app sh
