--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ services:
 before_script: pip install docker-compose
 
 script:
-  - docker-compose run app sh -c "python -m pytest -v && flake8"
+  - docker-compose run app sh -c "python -m pytest -v"
